# asmr

./: .gitignore  Makefile  README.md  _config.yml  _toc.yml  app.js  intro.md  jupyterhub.py  package-lock.json  refresh_page.sh  requirements.txt
allgemeines/: python.md
api/: main.py
chat/: chat.html  chat.js  chat_button.html  chat_modal.html  insert-html.py
decker_slides/: asmr_ex_06-13-deck.html  asmr_ex_06_20-deck.html  fad45dfea.json
decker_slides/public/: asmr_ex_05-02-deck.html  asmr_ex_06-06-deck.html  index.html
docs/: .buildinfo  genindex.html  intro.html  objects.inv  python_intro.html  search.html  searchindex.js
docs/_sources/: intro.md
docs/allgemeines/: python.html  verwendung.html
docs/ex_slides/: 1cf0fd9e3.json  528c3923d.json  asmr_ex_05-16-deck.html  ec43bc981.json  f2133a518.json  fe7046076.json  index.html
docs/html/: .buildinfo  genindex.html  intro.html  objects.inv  python_intro.html  search.html  searchindex.js
docs/ros2/: interface.html  navigation.html  node.html  package.html  service.html  setup.html  topic.html
docs/vorlesung/: Architekturen.html  Autonomie.html  Kinematik.html  Localisation.html  Locomotion.html  PathPlanning.html  Pid-Controller.html  Sensorik.html
examples/python/: name.py  other.py
exercises/: algo_ik_arm.ipynb  bang_bang_robot_car.ipynb  iter_ik_arm_anim.ipynb  pid_robot_car.ipynb
exercises/arm/src/arm/: package.xml
exercises/arm/src/arm/launch/: arm.launch.py  grabber.launch.py
exercises/arm/src/arm/models/: additional-info.xacro.urdf  arm.urdf.xacro  grabber.urdf
exercises/block2/: algo_ik_arm_solution.ipynb  bang_bang_robot_car.ipynb  iter_ik_arm_anim_solution.ipynb  pid_robot_car_solution.ipynb
exercises/block4/: dijkstra.ipynb  maps.json  (+2 more)
exercises/bonus_ws/src/maze_slam/: package.xml  setup.cfg  setup.py
exercises/bonus_ws/src/maze_slam/launch/: display.launch.py
exercises/bonus_ws/src/maze_slam/rviz/: urdf_config.rviz
exercises/bonus_ws/src/maze_slam/urdf/: sam_bot_description.urdf
exercises/bonus_ws/src/maze_slam/world/: body.sdf  maze_1.sdf  maze_world.sdf  my_world.sdf
exercises/braitenberg/src/braitenberg/: package.xml  setup.py
exercises/braitenberg/src/braitenberg/config/: lidar.bridge.yaml
exercises/braitenberg/src/braitenberg/models/: lidar_maze.sdf
quizzes/: architectures.json  autonomie.json  interfaces.json  kinematic.json  localisation.json  locomotion.json  packages.json  path-planning.json  pid-controller.json  sensoren.json  service.json  topic.json
ros2/: navigation.md  package.md  setup.md  topic.md
snippets/: myst.txt
vorlesung/: Autonomie.md
(+192 files in other folders)
