<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm</name>
  <version>0.0.0</version>
  <description>ROS2 controlled arm for ASMR course</description>
  <maintainer email="j_albr16@uni-muenster.de">scrutycs</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>position_controller</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
