<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maze_slam</name>
  <version>0.0.0</version>
  <description>Slam Assignment for the ASMR Tutorium</description>
  <maintainer email="j_albr16@uni-muenster.de">Jan Albrecht</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>slam_toolbox</depend>
  <depend>robot_localization</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
