<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>braitenberg</name>
  <version>0.0.1</version>
  <description>This is an package for the ASMR course.</description>
  <maintainer email="j_albr16@uni-muenster.de">Jan Albrecht</maintainer>
  <license>Apache License 2.0</license>

  <depend>ros2launch</depend>
  <depend>custom_interfaces</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
